--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -5,6 +5,10 @@
 
 .container {
   text-align: center;
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  grid-template-rows: 2fr 1fr 11fr 1fr;
+  gap: 4px;
 }
 
 .container div {
@@ -16,7 +20,20 @@
 }
 
 .header {
+  align-content: center;
   background-color: #393f4d;
+  grid-area: 1 / 1 / 2 / 3;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  align-items: center;
+}
+
+.logo {
+  justify-self: start;
+}
+
+ul {
+  list-style-type: none;
 }
 
 .menu ul,
@@ -24,8 +41,19 @@
   font-size: 16px;
 }
 
+.menu ul {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  justify-items: end;
+}
+
 .sidebar {
   background-color: #C50208;
+  grid-area: 2 / 1 / 4 / 2;
+
+  display: grid;
+  grid-template-rows: repeat(4, 1fr);
+  gap: 50px;
 }
 
 .sidebar .photo {
@@ -44,8 +72,19 @@
   font-weight: normal;
 }
 
+.photo,
+.side-content {
+  display: grid;
+  align-items: center;
+}
+
 .nav {
   background-color: #C50208;
+}
+
+.nav ul{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
 }
 
 .nav ul li {
@@ -55,6 +94,10 @@
 
 .article {
   background-color: #bccbde;
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 15px;
 }
 
 .article p {
@@ -68,12 +111,15 @@
   background-color: #FFFFFF;
   color: black;
   text-align: center;
+
+  height: 200px;
 }
 
 .card p {
   color: black;
   font-weight: normal;
   font-size: 14px;
+  padding: 5px;
 }
 
 .card .title {
@@ -83,6 +129,7 @@
 
 .footer {
   background-color: #393f4d;
+  grid-area: -1 / 1 / -2 / 3 ;
 }
 
 .footer p {
